# MLOps_Package

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml
experiment/: experiments.ipynb
src/mongo_connect/: mongo_crud.py
