[metadata]
name = databaseautomation
version = 0.0.4
author = sudheerpulapa
author_email = sudheerpulapa@gmail.com
description = A Python package for connecting with databases.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudheerpulapa/mongodbconnectorpkg
project_urls =
    Bug Tracker = https://github.com/sudheerpulapa/mongodbconnectorpkg/issues
    Source Code = https://github.com/sudheerpulapa/mongodbconnectorpkg
    Documentation = https://github.com/sudheerpulapa/mongodbconnectorpkg#readme
license = MIT
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Database
keywords = mongodb, database, automation, python, package

[options]
package_dir = 
    = src
packages = find:
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
    pymongo>=3.11.0
python_requires = >=3.7
include_package_data = true

[options.extras_require]
dev =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    your_script_name = your_module:main_function

[flake8]
max-line-length = 160
exclude = 
    __init__.py

[tool:pytest]
addopts = --verbose
testpaths = tests

[mypy]
files = src/
ignore_missing_imports = True

[tox:tox]
envlist = py37, py38, py39

[testenv]
deps = 
    pytest
    mypy
    flake8
    tox
    black
commands =
    pytest
    mypy src/
    flake8 src/
    black src/ --check
